--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <body>
         Are you ready
         <hr>
-        <a href="https://www.onlinegdb.com/online_python_compiler"><button>click me</button></a>
+        <a href="https://github.com/Boon29/yankang/blob/main/WhatsApp%20Image%202024-12-31%20at%2012.03.41_62864c66.jpg"><button>click me</button></a>
     </body>
 </html>
