--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <body>
         Are you ready
         <hr>
+        this is to try
         <a href="https://github.com/Boon29/yankang/blob/main/WhatsApp%20Image%202024-12-31%20at%2012.03.41_62864c66.jpg"><button>click me</button></a>
     </body>
 </html>
