--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head><title>this is a training</title></head>
+    <head><title>try</title></head>
     <body>
-        Are you ready
+        Click this button if you are yan kang
         <hr>
         this is to try
-        <a href="https://github.com/Boon29/yankang/blob/main/WhatsApp%20Image%202024-12-31%20at%2012.03.41_62864c66.jpg"><button>click me</button></a>
+        <a href="https://github.com/Boon29/yankang/blob/main/WhatsApp%20Image%202024-12-31%20at%2012.03.41_62864c66.jpg?raw=true"><button>坑哥按这里</button></a>
     </body>
 </html>
